--- a/app/views/mvp1/user-add-prap.html
+++ b/app/views/mvp1/user-add-prap.html
@@ -14,7 +14,7 @@
             <form action="user-add-user-prap" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
-                        html: '<span class="govuk-caption-l">Add a new user</span>Choose organisation',
+                        html: '<span class="govuk-caption-l">Add a new user</span>Which organisation are you adding the user to?',
                         classes: "govuk-fieldset__legend--l",
                         isPageHeading: true
                     }
@@ -33,8 +33,9 @@
                         <option value="MoJ">MoJ</option>
                         <option value="MoD">MoD</option>
                         <option value="NHS">NHS</option>
-                        <option value="Organisation R Us">Organisation R Us</option>
-                        <option value="Somebody Else, Ltd">Somebody Else, Ltd</option>
+                        <option value="Remploy">Remploy</option>
+                        <option value="G4S">G4S</option>
+                        <option value="London Borough of Croydon Council">London Borough of Croydon Council</option>
                     </select>
                 </div>
 
