--- a/app/views/v2/organisation-list.html
+++ b/app/views/v2/organisation-list.html
@@ -43,7 +43,10 @@
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="organisation-edit" class="govuk-link">Providers R Us</a></th>
         <td class="govuk-table__cell"><a href="operator-edit" class="govuk-link">Health</a></td>
-        <td class="govuk-table__cell"><a href="service-edit" class="govuk-link">Health Assessment</a></td>
+        <td class="govuk-table__cell">
+          <a href="service-edit" class="govuk-link">Health Assessment</a><br />
+          <a href="service-edit" class="govuk-link">View Benefit Information</a>
+        </td>
         <td class="govuk-table__cell govuk-table__cell--numeric"><a href="user-list" class="govuk-link">31</a></td>
       </tr>
 
