--- a/app/views/mvp1/user-list-prap-capita.html
+++ b/app/views/mvp1/user-list-prap-capita.html
@@ -9,15 +9,16 @@
 {% endblock %}
 
 {% block content %}
-  <h1 class="govuk-heading-l listing-page">PRaP Users</h1>
+  <h1 class="govuk-heading-l listing-page"><span class="govuk-caption-l">Capita </span>
+  Users</h1>
 
-  <a href="user-add-prap" class="govuk-button listing-page">Add new user</a>
+  <a href="user-add-user-prap-capita" class="govuk-button listing-page">Add new user</a>
 
   <table class="govuk-table">
     <thead class="govuk-table__head">
       <tr class="govuk-table__row">
-        <th scope="col" class="govuk-table__header">Name</th>
-        <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Organisation</th>
+        <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
+        <th scope="col" class="govuk-table__header govuk-!-width-one-third">Email address</th>
         <th scope="col" class="govuk-table__header">Status</th>
       </tr>
     </thead>
@@ -26,89 +27,90 @@
       {% if data['user-full-name'] %}
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">{{ data['user-full-name'] }}</a></th>
-        <td class="govuk-table__cell">{{ data['user-organisation'] }}</td>
-        <td class="govuk-table__cell">Active</td>
+        <td class="govuk-table__cell">{{ data['user-email-address'] }}</td>
+        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--active">Active</span></td>
       </tr>
       {% endif %}
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Gary Speed</a></th>
-        <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell">gary.speed@capita.co.uk</td>
         <td class="govuk-table__cell">Suspended</td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Gordon Strachan</a></th>
-        <td class="govuk-table__cell">G3S</td>
+        <td class="govuk-table__cell">gordon.strachan@capita.co.uk</td>
         <td class="govuk-table__cell">Pending activation</td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Gary McAllister</a></th>
-        <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell">gary.mcallister@capita.co.uk</td>
         <td class="govuk-table__cell">Active</td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Tony Dorigo</a></th>
-        <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell">tony.dorigo@capita.co.uk</td>
         <td class="govuk-table__cell">Active</td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Mel Sterland</a></th>
-        <td class="govuk-table__cell">Capita</td>
+        <td class="govuk-table__cell">mel.sterland@capita.co.uk</td>
         <td class="govuk-table__cell">Active</td>
       </tr>
 
       <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">John Doe</a></th>
-        <td class="govuk-table__cell">Capita</td>
+        <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">David Batty</a></th>
+        <td class="govuk-table__cell">david.batty@capita.co.uk</td>
         <td class="govuk-table__cell">Suspended</td>
       </tr>
 
       <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jackson Smith</a></th>
-        <td class="govuk-table__cell">Capita</td>
+        <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Rod Wallace</a></th>
+        <td class="govuk-table__cell">rod.wallace@capita.co.uk</td>
         <td class="govuk-table__cell">Active</td>
       </tr>
 
       <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jessie Smith</a></th>
-        <td class="govuk-table__cell">Capita</td>
+        <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Lee Chapman</a></th>
+        <td class="govuk-table__cell">lee.chapman@capita.co.uk</td>
         <td class="govuk-table__cell">Active</td>
       </tr>
 
       <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">John Smith</a></th>
-        <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell">Active</td>
+        <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Steve Hodge</a></th>
+        <td class="govuk-table__cell">steve.hodge@capita.co.uk</td>
+        <td class="govuk-table__cell ">Active</td>
       </tr>
     </tbody>
   </table>
 
   <nav role="navigation" aria-label="Pagination">
     <div class="pagination__summary">
-      Showing 1 &ndash; 10 of 15 results
+      Showing 1 &ndash; 10 of 13 results
     </div>
 
     <ul class="pagination">
-      <li class="pagination__item">
-        <span class="pagination__link disabled" aria-label="Previous page">
-          <span aria-hidden="true" role="presentation">&laquo;</span> Previous
-        </span>
-      </li>
+
+        <li class="pagination__item">
+            <a class="pagination__link disabled" aria-label="Previous page">
+              <span aria-hidden="true" role="presentation">&laquo;</span> Previous
+            </a>
+          </li>
 
       <li class="pagination__item">
         <span class="pagination__link current" aria-label="Page 1">1</span>
       </li>
 
       <li class="pagination__item">
-        <a class="pagination__link" href="user-list-prap-2" aria-label="Page 2">2</a>
+        <a class="pagination__link" href="user-list-prap-capita-2" aria-label="Page 2">2</a>
       </li>
 
       <li class="pagination__item">
-        <a class="pagination__link" href="user-list-prap-2" aria-label="Next page">
+        <a class="pagination__link" href="user-list-prap-capita-2" aria-label="Next page">
           Next <span aria-hidden="true" role="presentation">&raquo;</span>
         </a>
       </li>
