Amends to orgs and add new user

--- a/app/views/mvp1/organisation-confirmation-prap.html
+++ b/app/views/mvp1/organisation-confirmation-prap.html
@@ -15,9 +15,9 @@
       titleText: data["organisation-name"] + " created"
     }) }}
 
-    <a href="organisation-list-prap" class="govuk-link">View all organisations</a><br>
+    <p><a href="organisation-list-prap" class="govuk-link">View all organisations</a><br>
     <a href="organisation-add-prap" class="govuk-link">Add another organisation</a><br>
-    <a href="dashboard-service-prap" class="govuk-link">Go to the dashboard</a>
+    <a href="dashboard-service-prap" class="govuk-link">Go to the dashboard</a></p>
   </div>
 </div>
 {% endblock %}
