--- a/app/views/mvp1/organisation-list-prap.html
+++ b/app/views/mvp1/organisation-list-prap.html
@@ -24,7 +24,7 @@
                 <tbody class="govuk-table__body">
                     {% if data['organisation-name'] %}
                     <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header"><a href="user-list-prap-g3s" class="govuk-link">{{ data['organisation-name'] }}</a></th>
+                        <th scope="row" class="govuk-table__header"><a href="user-list-prap-new" class="govuk-link">{{ data['organisation-name'] }}</a></th>
                         <td class="govuk-table__cell govuk-table__cell--numeric">0</td>
                     </tr>
                     {% endif %}
@@ -51,8 +51,8 @@
 
 
                     <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header"><a href="user-list-prap-remploy" class="govuk-link">Serco</a></th>
-                        <td class="govuk-table__cell govuk-table__cell--numeric"><a href="user-list-prap-remploy" class="govuk-link">16</a></td>
+                        <th scope="row" class="govuk-table__header"><a href="user-list-prap-serco" class="govuk-link">Serco</a></th>
+                        <td class="govuk-table__cell govuk-table__cell--numeric"><a href="user-list-prap-remploy" class="govuk-link">7</a></td>
                     </tr>
 
                     
