--- a/app/views/mvp1/user-add-prap.html
+++ b/app/views/mvp1/user-add-prap.html
@@ -36,6 +36,7 @@
                         <option value="Remploy">Remploy</option>
                         <option value="G4S">G4S</option>
                         <option value="London Borough of Croydon Council">London Borough of Croydon Council</option>
+                        <option value="{{ data['organisation-name'] }}">{{ data['organisation-name'] }}</option>
                     </select>
                 </div>
 
