--- a/app/views/mvp1/user-list-prap-g3s.html
+++ b/app/views/mvp1/user-list-prap-g3s.html
@@ -87,6 +87,12 @@
         <td class="govuk-table__cell">bob.nudd@g4s.co.uk</td>
         <td class="govuk-table__cell ">Active</td>
       </tr>
+
+      <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Robert Church</a></th>
+          <td class="govuk-table__cell">robert.church@g4s.co.uk</td>
+          <td class="govuk-table__cell ">Active</td>
+        </tr>
     </tbody>
   </table>
 
@@ -107,11 +113,11 @@
       </li>
 
       <li class="pagination__item">
-        <a class="pagination__link" href="user-list-prap-2" aria-label="Page 2">2</a>
+        <a class="pagination__link" href="user-list-prap-g3s-2" aria-label="Page 2">2</a>
       </li>
 
       <li class="pagination__item">
-        <a class="pagination__link" href="user-list-prap-2" aria-label="Next page">
+        <a class="pagination__link" href="user-list-prap-g3s-2" aria-label="Next page">
           Next <span aria-hidden="true" role="presentation">&raquo;</span>
         </a>
       </li>
