Changes to confirmation pages and add text

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -321,3 +321,7 @@ a.pagination__link:focus {
 .govuk-list.signin li {
     min-height: 30px;
 }
+
+.govuk-link:visited, a:visited {
+  color:#1d70b8;
+}
