--- a/app/views/mvp1/organisation-add-prap.html
+++ b/app/views/mvp1/organisation-add-prap.html
@@ -14,7 +14,7 @@
             <form action="organisation-confirmation-prap" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
-                    html: 'Add a new organisation',
+                    html: 'Add an organisation',
                     classes: "govuk-fieldset__legend--l",
                     isPageHeading: true
                     }
