--- a/app/views/mvp1/organisation-list-prap.html
+++ b/app/views/mvp1/organisation-list-prap.html
@@ -11,7 +11,7 @@
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-l listing-page">Organisations using PRaP</h1>
 
-            <a href="organisation-add-prap" class="govuk-button listing-page">Add new organisation</a>
+            <a href="organisation-add-prap" class="govuk-button listing-page">Add organisation</a>
 
             <table class="govuk-table">
                 <thead class="govuk-table__head">
