--- a/app/views/mvp1/user-add-user-prap.html
+++ b/app/views/mvp1/user-add-user-prap.html
@@ -14,7 +14,7 @@
             <form action="user-confirmation-prap" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
-                        html: '<span class="govuk-caption-l">Add a new user</span>User details',
+                        html: '<span class="govuk-caption-l">Add a user</span>User details',
                         classes: "govuk-fieldset__legend--l",
                         isPageHeading: true
                     }
