--- a/app/views/mvp1/user-list-prap.html
+++ b/app/views/mvp1/user-list-prap.html
@@ -11,7 +11,7 @@
 {% block content %}
   <h1 class="govuk-heading-l listing-page">PRaP Users</h1>
 
-  <a href="user-add-prap" class="govuk-button listing-page">Add new user</a>
+  <a href="user-add-prap" class="govuk-button listing-page">Add a user</a>
 
   <table class="govuk-table">
     <thead class="govuk-table__head">
@@ -102,7 +102,7 @@
 
   <nav role="navigation" aria-label="Pagination">
     <div class="pagination__summary">
-      Showing 1 &ndash; 10 of 15 results
+      Showing 1 &ndash; 10 of 74 results
     </div>
 
     <ul class="pagination">
@@ -119,6 +119,26 @@
       <li class="pagination__item">
         <a class="pagination__link" href="user-list-prap-2" aria-label="Page 2">2</a>
       </li>
+
+      <li class="pagination__item">
+          <a class="pagination__link" href="user-list-prap-2" aria-label="Page 2">3</a>
+        </li>
+
+        <li class="pagination__item">
+            <a class="pagination__link" href="user-list-prap-2" aria-label="Page 2">4</a>
+          </li>
+
+          <li class="pagination__item">
+              <a class="pagination__link" href="user-list-prap-2" aria-label="Page 2">5</a>
+            </li>
+
+            <li class="pagination__item">
+                <a class="pagination__link" href="user-list-prap-2" aria-label="Page 2">6</a>
+              </li>
+
+              <li class="pagination__item">
+                  <a class="pagination__link" href="user-list-prap-2" aria-label="Page 2">7</a>
+                </li>
 
       <li class="pagination__item">
         <a class="pagination__link" href="user-list-prap-2" aria-label="Next page">
