--- a/app/views/mvp1/dashboard-service-prap.html
+++ b/app/views/mvp1/dashboard-service-prap.html
@@ -23,7 +23,7 @@
 
     <ul class="govuk-list">
       <li>
-        <a href="organisation-add-prap" class="govuk-link">Add new organisation</a>
+        <a href="organisation-add-prap" class="govuk-link">Add an organisation</a>
       </li>
 
       <li>
@@ -43,7 +43,7 @@
 
     <ul class="govuk-list">
       <li>
-        <a href="user-add-prap" class="govuk-link">Add a new user</a>
+        <a href="user-add-prap" class="govuk-link">Add a user</a>
       </li>
 
       <!--<li>
