--- a/app/views/mvp1/organisation-confirmation-prap.html
+++ b/app/views/mvp1/organisation-confirmation-prap.html
@@ -12,12 +12,16 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     {{ govukPanel({
-      titleText: data["organisation-name"] + " created"
+
+      
+      titleText: "Organisation added",
+
+      html: data["organisation-name"]
     }) }}
 
-    <p><a href="organisation-list-prap" class="govuk-link">View all organisations</a><br>
-    <a href="organisation-add-prap" class="govuk-link">Add another organisation</a><br>
-    <a href="dashboard-service-prap" class="govuk-link">Go to the dashboard</a></p>
+    <p><a href="user-add-user-prap-new" class="govuk-link">Add a user to {{ data['organisation-name'] }}</a><br>
+    
+    <p><a href="dashboard-service-prap" class="govuk-link">Go to the dashboard</a></p>
   </div>
 </div>
 {% endblock %}
