--- a/app/views/mvp1/user-confirmation-prap.html
+++ b/app/views/mvp1/user-confirmation-prap.html
@@ -11,9 +11,17 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      {{ govukPanel({
-        titleText: data["user-full-name"] + " created in " + data["user-organisation"]
-      }) }}
+      
+
+        {{ govukPanel({
+
+      
+          titleText: "User added",
+    
+          html: data["user-full-name"] + " created in " + data["user-organisation"]
+        }) }}
+
+
 
       <p>An invitation has been sent to {{data['user-email-address']}}</p>
 
