--- a/app/views/mvp1/user-list-prap-2.html
+++ b/app/views/mvp1/user-list-prap-2.html
@@ -11,7 +11,7 @@
 {% block content %}
   <h1 class="govuk-heading-l listing-page">Users</h1>
 
-  <a href="user-add-prap" class="govuk-button listing-page">Add new user</a>
+  <a href="user-add-prap" class="govuk-button listing-page">Add a user</a>
 
   <table class="govuk-table">
     <thead class="govuk-table__head">
@@ -26,31 +26,31 @@
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jane Smith</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--active">Active</span></td>
+        <td class="govuk-table__cell">Active</td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Joan Smith</a></th>
         <td class="govuk-table__cell">G3S</td>
-        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--active">Active</span></td>
+        <td class="govuk-table__cell">Active</td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">James Smith</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--active">Active</span></td>
+        <td class="govuk-table__cell">Active</td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Joe Smith</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--inactive">Suspended</span></td>
+        <td class="govuk-table__cell">Suspended</td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jack Smith</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--active">Active</span></td>
+        <td class="govuk-table__cell">Active</td>
       </tr>
     </tbody>
   </table>
