--- a/app/views/mvp1/user-list-prap-capita.html
+++ b/app/views/mvp1/user-list-prap-capita.html
@@ -28,7 +28,7 @@
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">{{ data['user-full-name'] }}</a></th>
         <td class="govuk-table__cell">{{ data['user-email-address'] }}</td>
-        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--active">Active</span></td>
+        <td class="govuk-table__cell">Active</td>
       </tr>
       {% endif %}
 
