Amends to user lists

--- a/app/views/mvp1/user-add-user-prap-new.html
+++ b/app/views/mvp1/user-add-user-prap-new.html
@@ -12,7 +12,7 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
                 <h1 class="govuk-heading-l listing-page"><span class="govuk-caption-l">{{ data['organisation-name'] }}</span> 
-                    Add a new user</h1>
+                    Add a user</h1>
             <form action="user-confirmation-prap-new" method="post" class="form">
                
                 {{ govukInput({
