--- a/app/views/mvp1/user-confirmation-prap.html
+++ b/app/views/mvp1/user-confirmation-prap.html
@@ -18,7 +18,7 @@
       
           titleText: "User added",
     
-          html: data["user-full-name"] + " created in " + data["user-organisation"]
+          html: data["user-full-name"] + " added to " + data["user-organisation"]
         }) }}
 
 
