--- a/app/views/mvp1/user-list-prap-capita.html
+++ b/app/views/mvp1/user-list-prap-capita.html
@@ -12,7 +12,7 @@
   <h1 class="govuk-heading-l listing-page"><span class="govuk-caption-l">Capita </span>
   Users</h1>
 
-  <a href="user-add-user-prap-capita" class="govuk-button listing-page">Add new user</a>
+  <a href="user-add-user-prap-capita" class="govuk-button listing-page">Add a user</a>
 
   <table class="govuk-table">
     <thead class="govuk-table__head">
@@ -87,6 +87,12 @@
         <td class="govuk-table__cell">steve.hodge@capita.co.uk</td>
         <td class="govuk-table__cell ">Active</td>
       </tr>
+
+      <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">John Lukic</a></th>
+          <td class="govuk-table__cell">john.lukic@capita.co.uk</td>
+          <td class="govuk-table__cell ">Active</td>
+        </tr>
     </tbody>
   </table>
 
