--- a/app/views/mvp1/user-list-prap-serco.html
+++ b/app/views/mvp1/user-list-prap-serco.html
@@ -12,7 +12,7 @@
   <h1 class="govuk-heading-l listing-page"><span class="govuk-caption-l">Serco </span>
   Users</h1>
 
-  <a href="user-add-user-prap-serco" class="govuk-button listing-page">Add new user</a>
+  <a href="user-add-user-prap-serco" class="govuk-button listing-page">Add a user</a>
 
   <table class="govuk-table">
     <thead class="govuk-table__head">
