--- a/app/views/mvp1/user-list-prap.html
+++ b/app/views/mvp1/user-list-prap.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-  <h1 class="govuk-heading-l listing-page">PRaP Users</h1>
+  <h1 class="govuk-heading-l listing-page">Users</h1>
 
   <a href="user-add-prap" class="govuk-button listing-page">Add a user</a>
 
@@ -97,6 +97,13 @@
         <td class="govuk-table__cell">steve.hodge@capita.co.uk</td>
         <td class="govuk-table__cell ">Active</td>
       </tr>
+
+      <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">John Lukic</a></th>
+          <td class="govuk-table__cell">Capita</td>
+          <td class="govuk-table__cell">john.lukic@capita.co.uk</td>
+          <td class="govuk-table__cell ">Active</td>
+        </tr>
     </tbody>
   </table>
 
