--- a/app/views/mvp1/user-add-user-prap-capita.html
+++ b/app/views/mvp1/user-add-user-prap-capita.html
@@ -15,7 +15,7 @@
                 {{ govukFieldset({
                     legend: {
                         html: '<h1 class="govuk-heading-l listing-page"><span class="govuk-caption-l">Capita</span> 
-                           Add a new user</h1>',
+                           Add a user</h1>',
                         classes: "govuk-fieldset__legend--l",
                         isPageHeading: true
                     }
