--- a/app/views/mvp1/user-list-prap-2.html
+++ b/app/views/mvp1/user-list-prap-2.html
@@ -16,72 +16,136 @@
   <table class="govuk-table">
     <thead class="govuk-table__head">
       <tr class="govuk-table__row">
-        <th scope="col" class="govuk-table__header">Name</th>
-        <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Organisation</th>
-        <th scope="col" class="govuk-table__header">Status</th>
+          <th scope="col" class="govuk-table__header">Name</th>
+          <th scope="col" class="govuk-table__header">Organisation</th>
+          <th scope="col" class="govuk-table__header">Email</th>
+          <th scope="col" class="govuk-table__header">Status</th>
       </tr>
     </thead>
 
     <tbody class="govuk-table__body">
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jane Smith</a></th>
-        <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
+        <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jon Newsome</a></th>
+            <td class="govuk-table__cell">Capita</td>
+            <td class="govuk-table__cell">jon.newsome@capita.co.uk</td>
+            <td class="govuk-table__cell">Suspended</td>
+          </tr>
+    
+          <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Chris Whyte</a></th>
+            <td class="govuk-table__cell">Capita</td>
+            <td class="govuk-table__cell">chris.whyte@capita.co.uk</td>
+            <td class="govuk-table__cell">Pending activation</td>
+          </tr>
+    
+          <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Chris Fairclough</a></th>
+            <td class="govuk-table__cell">Capita</td>
+            <td class="govuk-table__cell">chris.fairclough@capita.co.uk</td>
+            <td class="govuk-table__cell">Active</td>
+          </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Joan Smith</a></th>
-        <td class="govuk-table__cell">G3S</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">James Smith</a></th>
-        <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
+          <tr class="govuk-table__row">
+              <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Matt Hayes</a></th>
+              <td class="govuk-table__cell">G4S</td>
+              <td class="govuk-table__cell">matt.hayes@g4s.co.uk</td>
+              <td class="govuk-table__cell">Suspended</td>
+            </tr>
+      
+            <tr class="govuk-table__row">
+              <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Mick Brown</a></th>
+              <td class="govuk-table__cell">G4S</td>
+              <td class="govuk-table__cell">mick.brown@g4s.co.uk</td>
+              <td class="govuk-table__cell">Pending activation</td>
+            </tr>
+      
+            <tr class="govuk-table__row">
+              <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">April Vokey</a></th>
+              <td class="govuk-table__cell">G4S</td>
+              <td class="govuk-table__cell">april.vokey@g4s.co.uk</td>
+              <td class="govuk-table__cell">Active</td>
+            </tr>
+      
+            <tr class="govuk-table__row">
+              <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">John Wilson</a></th>
+              <td class="govuk-table__cell">G4S</td>
+              <td class="govuk-table__cell">john.wilson@g4s.co.uk</td>
+              <td class="govuk-table__cell">Active</td>
+            </tr>
+      
+            <tr class="govuk-table__row">
+              <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Paul Young</a></th>
+              <td class="govuk-table__cell">G4S</td>
+              <td class="govuk-table__cell">paul.young@g4s.co.uk</td>
+              <td class="govuk-table__cell">Active</td>
+            </tr>
+      
+            <tr class="govuk-table__row">
+              <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Marina Gibson</a></th>
+              <td class="govuk-table__cell">G4S</td>
+              <td class="govuk-table__cell">marina.gibson@g4s.co.uk</td>
+              <td class="govuk-table__cell">Suspended</td>
+            </tr>
+      
+            <tr class="govuk-table__row">
+              <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jeremy Wade</a></th>
+              <td class="govuk-table__cell">G4S</td>
+              <td class="govuk-table__cell">jeremy.wade@g4s.co.uk</td>
+              <td class="govuk-table__cell">Active</td>
+            </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Joe Smith</a></th>
-        <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell">Suspended</td>
-      </tr>
 
-      <tr class="govuk-table__row">
-        <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jack Smith</a></th>
-        <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell">Active</td>
-      </tr>
     </tbody>
   </table>
 
   <nav role="navigation" aria-label="Pagination">
-    <div class="pagination__summary">
-      Showing 11 &ndash; 15 of 15 results
-    </div>
-
-    <ul class="pagination">
-      <li class="pagination__item">
-        <a class="pagination__link" href="user-list-prap"  aria-label="Previous page">
-          <span aria-hidden="true" role="presentation">&laquo;</span> Previous
-        </a>
-      </li>
-
-      <li class="pagination__item">
-        <a class="pagination__link" href="user-list-prap" aria-label="Page 1">1</a>
-      </li>
-
-      <li class="pagination__item">
-        <a class="pagination__link current" href="user-list-prap-2" aria-label="Page 2">2</a>
-      </li>
-
-      <li class="pagination__item">
-        <span class="pagination__link disabled" aria-label="Next page">
-          Next <span aria-hidden="true" role="presentation">&raquo;</span>
-        </span>
-      </li>
-    </ul>
-  </nav>
+      <div class="pagination__summary">
+        Showing 11 &ndash; 20 of 74 results
+      </div>
+  
+      <ul class="pagination">
+        <li class="pagination__item">
+          <a class="pagination__link" href="user-list-prap" aria-label="Previous page">
+            <span aria-hidden="true" role="presentation">&laquo;</span> Previous
+          </a>
+        </li>
+  
+        <li class="pagination__item">
+          <a class="pagination__link" href="user-list-prap" aria-label="Page 1">1</a>
+        </li>
+  
+        <li class="pagination__item">
+          <span class="pagination__link current" aria-label="Page 2">2</span>
+        </li>
+  
+        <li class="pagination__item">
+            <a class="pagination__link" href="user-list-prap-2" aria-label="Page 2">3</a>
+          </li>
+  
+          <li class="pagination__item">
+              <a class="pagination__link" href="user-list-prap-2" aria-label="Page 2">4</a>
+            </li>
+  
+            <li class="pagination__item">
+                <a class="pagination__link" href="user-list-prap-2" aria-label="Page 2">5</a>
+              </li>
+  
+              <li class="pagination__item">
+                  <a class="pagination__link" href="user-list-prap-2" aria-label="Page 2">6</a>
+                </li>
+  
+                <li class="pagination__item">
+                    <a class="pagination__link" href="user-list-prap-2" aria-label="Page 2">7</a>
+                  </li>
+  
+        <li class="pagination__item">
+          <a class="pagination__link" href="user-list-prap-2" aria-label="Next page">
+            Next <span aria-hidden="true" role="presentation">&raquo;</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
 
   <p class="govuk-!-margin-top-9">
     <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
