--- a/app/views/mvp1/user-list-prap-g3s.html
+++ b/app/views/mvp1/user-list-prap-g3s.html
@@ -14,7 +14,7 @@
 
   
 
-  <a href="user-add-user-prap-g3s" class="govuk-button listing-page">Add new user</a>
+  <a href="user-add-user-prap-g3s" class="govuk-button listing-page">Add a user</a>
 
   <table class="govuk-table">
     <thead class="govuk-table__head">
