--- a/app/views/v3/user-add-service.html
+++ b/app/views/v3/user-add-service.html
@@ -16,7 +16,7 @@
             <form action="user-confirmation-health-assessment" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
-                        html: '<span class="govuk-caption-l">Add a new service admin</span>Service admin details',
+                        html: '<span class="govuk-caption-l">Add a user</span>Service admin',
                         classes: "govuk-fieldset__legend--l",
                         isPageHeading: true
                     }
