--- a/app/views/v3/dashboard-root.html
+++ b/app/views/v3/dashboard-root.html
@@ -25,7 +25,7 @@
 
     <ul class="govuk-list">
       <li>
-        <a href="/v3/service-add" class="govuk-link">Add a new service</a>
+        <a href="/v3/service-add" class="govuk-link">Add a service</a>
       </li>
 
       <li>
@@ -35,17 +35,17 @@
   </div>
 
   <div class="govuk-cards--2__item govuk-cards--2__item--dashboard">
-    <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Organisations</h2>
+    <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Non-DWP organisations</h2>
 
     <p class="govuk-heading-xl govuk-!-margin-bottom-5">
       <span class="govuk-visually-hidden">There are currently</span>
         90
-      <span class="govuk-visually-hidden">organisations in the system</span>
+      <span class="govuk-visually-hidden">Non-DWP organisations in the system</span>
     </p>
 
     <ul class="govuk-list">
       <li>
-        <a href="/v3/organisation-add" class="govuk-link">Add a new organisation</a>
+        <a href="/v3/organisation-add" class="govuk-link">Add an organisation</a>
       </li>
 
       <li>
@@ -65,11 +65,11 @@
 
     <ul class="govuk-list">
       <li>
-        <a href="/v3/user-add" class="govuk-link">Add a new user</a>
+        <a href="/v3/user-add" class="govuk-link">Add a user</a>
       </li>
 
       <li>
-        <a href="#" class="govuk-link">Upload file to add new users</a>
+        <a href="#" class="govuk-link">Upload file to add users</a>
       </li>
 
       <li>
