--- a/app/views/v3/organisation-add.html
+++ b/app/views/v3/organisation-add.html
@@ -16,7 +16,7 @@
             <form action="organisation-confirmation" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
-                    html: '<span class="govuk-caption-l">Add a new organisation</span>Organisation details',
+                    html: '<span class="govuk-caption-l">Add an organisation</span>Organisation details',
                     classes: "govuk-fieldset__legend--l",
                     isPageHeading: true
                     }
