--- a/app/views/v3/service-add-support.html
+++ b/app/views/v3/service-add-support.html
@@ -16,7 +16,7 @@
             <form action="service-add-connection" method="post" class="form">
                 <fieldset class="govuk-fieldset">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                        <span class="govuk-caption-l">Add a new service</span>
+                        <span class="govuk-caption-l">Add a service</span>
                         Support information
                     </legend>
 
