--- a/app/views/v3/user-add-user.html
+++ b/app/views/v3/user-add-user.html
@@ -16,7 +16,7 @@
             <form action="user-confirmation" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
-                        html: '<span class="govuk-caption-l">Add a new user</span>User details',
+                        html: '<span class="govuk-caption-l">Add a user</span>User details',
                         classes: "govuk-fieldset__legend--l",
                         isPageHeading: true
                     }
