Changes to service list

--- a/app/views/v3/service-list.html
+++ b/app/views/v3/service-list.html
@@ -11,7 +11,7 @@
 {% block content %}
   <h1 class="govuk-heading-l listing-page">Services</h1>
 
-  <a href="service-add" class="govuk-button listing-page">Add new service</a>
+  <a href="service-add" class="govuk-button listing-page">Add a service</a>
 
   <table class="govuk-table">
     <thead class="govuk-table__head">
