--- a/app/views/mvp1/user-list-prap-3.html
+++ b/app/views/mvp1/user-list-prap-3.html
@@ -127,23 +127,23 @@
           </li>
   
           <li class="pagination__item">
-              <a class="pagination__link" href="user-list-prap-2" aria-label="Page 2">4</a>
+              <a class="pagination__link" href="#" aria-label="Page 2">4</a>
             </li>
   
             <li class="pagination__item">
-                <a class="pagination__link" href="user-list-prap-2" aria-label="Page 2">5</a>
+                <a class="pagination__link" href="#" aria-label="Page 2">5</a>
               </li>
   
               <li class="pagination__item">
-                  <a class="pagination__link" href="user-list-prap-2" aria-label="Page 2">6</a>
+                  <a class="pagination__link" href="#" aria-label="Page 2">6</a>
                 </li>
   
                 <li class="pagination__item">
-                    <a class="pagination__link" href="user-list-prap-2" aria-label="Page 2">7</a>
+                    <a class="pagination__link" href="#" aria-label="Page 2">7</a>
                   </li>
   
         <li class="pagination__item">
-          <a class="pagination__link" href="user-list-prap-2" aria-label="Next page">
+          <a class="pagination__link" href="#" aria-label="Next page">
             Next <span aria-hidden="true" role="presentation">&raquo;</span>
           </a>
         </li>
