--- a/app/views/mvp1/organisation-confirmation-prap.html
+++ b/app/views/mvp1/organisation-confirmation-prap.html
@@ -10,18 +10,21 @@
 
 {% block content %}
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    {{ govukPanel({
+    <div class="govuk-grid-column-two-thirds">
+        {{ govukPanel({
+            titleText: "Organisation added",
+            html: data["organisation-name"]
+        }) }}
 
-      
-      titleText: "Organisation added",
+        <p>
+            <a href="user-add-user-prap-new" class="govuk-link">
+                Add a user to {{ data['organisation-name'] }}
+            </a><br>
 
-      html: data["organisation-name"]
-    }) }}
-
-    <p><a href="user-add-user-prap-new" class="govuk-link">Add a user to {{ data['organisation-name'] }}</a><br>
-    
-    <p><a href="dashboard-service-prap" class="govuk-link">Go to the dashboard</a></p>
-  </div>
+            <a href="dashboard-service-prap" class="govuk-link">
+                Go to the dashboard
+            </a>
+        </p>
+    </div>
 </div>
 {% endblock %}
